--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&family=Russo+One&display=swap');
 
 * {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 :root {
