--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,52 @@ footer {
     font-size: 2rem;
 }
 
+.modal {
+    display: none;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(239, 204, 204, 0.5);
+    position: fixed;
+    left: 0;
+    top: 0;
+}
+
+.contact-form2 {
+    /*12. lesson*/
+    display: block;
+    width: 100%;
+    font-size: 20px;
+}
+
+.contact-form2 form {
+    text-align: start;
+    box-sizing: border-box;
+    padding: 32px;
+}
+
+input,
+textarea {
+    width: 100%;
+    background-color: var(--primary-color-buttons);
+}
+
+input {
+    height: 34px;
+}
+
+.contact-form2 button {
+    background-color: var(--primary-color-headlines);
+    color: var(--primary-color-background);
+    text-transform: none;
+    margin-left: 0;
+}
+
 @media (min-width: 600px) and (max-width: 1024px) {
+    .modal {
+    display: none;
+    }
+
     .menu-panel,
     .close {
         display: none;
@@ -458,6 +503,10 @@ footer {
 }
 
 @media (min-width: 1025px) {
+    .modal {
+        display: none;
+        }
+
     .menu-panel,
     .close {
         display: none;
